complete service section

--- a/index.html
+++ b/index.html
@@ -36,5 +36,40 @@
         </div>
       </div>
     </div>
+    <div id="services_container">
+      <!-- 3 sercvices flex layout with customized cards for each service, camping theme, wilderness -->
+      <div id="services">
+        <div class="card">
+          <div class="img img-hiking"></div>
+          <h2>Hiking</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
+            officia eligendi commodi assumenda similique amet dolor dignissimos
+            maxime delectus aut?
+          </p>
+        </div>
+        <div class="card">
+          <div class="img img-trails"></div>
+          <h2>Trails</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            blanditiis autem a officiis adipisci harum voluptates accusantium
+            soluta delectus quidem.
+          </p>
+        </div>
+        <div class="card">
+          <div class="img img-camping"></div>
+          <h2>Camping</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto
+            provident omnis, similique explicabo ipsum dolores nemo architecto
+            magni eveniet vel?
+          </p>
+        </div>
+      </div>
+    </div>
+    <div id="about_us">
+      <!-- brief explanation of company -->
+    </div>
   </body>
 </html>
