changed home background, added intersection observer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <div id="services_container">
       <!-- 3 sercvices flex layout with customized cards for each service, camping theme, wilderness -->
-      <div id="services">
+      <div id="services" class="section_translate-left">
         <div class="card">
           <div class="img img-hiking"></div>
           <h2>Hiking</h2>
@@ -71,5 +71,6 @@
     <div id="about_us">
       <!-- brief explanation of company -->
     </div>
+    <script src="/script.js"></script>
   </body>
 </html>
