weather bar complete

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/style.css" />
     <title>Zeno</title>
   </head>
@@ -22,7 +28,7 @@
         <button id="nav-contact"><a href="#">Contact</a></button>
       </div>
       <div id="hook_container">
-        <h1 id="hook">Explore Beyond the Edges of the World</h1>
+        <h1 id="hook">Explore Beyond the Edges of Washington</h1>
         <p id="hook_description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
           eveniet deserunt iusto consequatur pariatur, rerum, facere maiores et
@@ -68,8 +74,103 @@
         </div>
       </div>
     </div>
-    <div id="about_us">
-      <!-- brief explanation of company -->
+    <div id="activity_suggestions_container">
+      <!-- only show in a case of severe weather conditions -->
+      <!-- <span id="emergency_weather-news">Emergency weather broadcast</span> -->
+
+      <!-- Use a weather API and tailor activities accordingly -->
+      <div class="weather-strip">
+        <!-- ------------ Sunday weathercard ---------- -->
+        <div class="weathercard">
+          <h2 id="Sunday" class="weekday">Sunday</h2>
+          <div class="weather-info">
+            <h3>16&deg;</h3>
+            <span id="cloudy"><i class="fas fa-cloud"></i>&nbsp;Cloudy</span>
+            <p class="weather-range">
+              <span id="highest_temp">H: 25</span
+              ><span id="lowest_temp">L: 12</span>
+            </p>
+          </div>
+        </div>
+
+        <!-- ------------ Monday weathercard ---------- -->
+        <div class="weathercard">
+          <h2 id="Monday" class="weekday">Monday</h2>
+          <div class="weather-info">
+            <h3>16&deg;</h3>
+            <span id="cloudy"><i class="fas fa-cloud"></i>&nbsp;Cloudy</span>
+            <p class="weather-range">
+              <span id="highest_temp">H: 25</span
+              ><span id="lowest_temp">L: 12</span>
+            </p>
+          </div>
+        </div>
+
+        <!-- ------------ Tuesday weathercard ---------- -->
+        <div class="weathercard">
+          <h2 id="Tuesday" class="weekday">Tuesday</h2>
+          <div class="weather-info">
+            <h3>16&deg;</h3>
+            <span id="cloudy"><i class="fas fa-cloud"></i>&nbsp;Cloudy</span>
+            <p class="weather-range">
+              <span id="highest_temp">H: 25</span
+              ><span id="lowest_temp">L: 12</span>
+            </p>
+          </div>
+        </div>
+
+        <!-- ------------ Wednesday weathercard ---------- -->
+        <div class="weathercard">
+          <h2 id="Wednesday" class="weekday">Wednesday</h2>
+          <div class="weather-info">
+            <h3>16&deg;</h3>
+            <span id="cloudy"><i class="fas fa-cloud"></i>&nbsp;Cloudy</span>
+            <p class="weather-range">
+              <span id="highest_temp">H: 25</span
+              ><span id="lowest_temp">L: 12</span>
+            </p>
+          </div>
+        </div>
+
+        <!-- ------------ Thursday weathercard ---------- -->
+        <div class="weathercard">
+          <h2 id="Thursday" class="weekday">Thursday</h2>
+          <div class="weather-info">
+            <h3>16&deg;</h3>
+            <span id="cloudy"><i class="fas fa-cloud"></i>&nbsp;Cloudy</span>
+            <p class="weather-range">
+              <span id="highest_temp">H: 25</span
+              ><span id="lowest_temp">L: 12</span>
+            </p>
+          </div>
+        </div>
+
+        <!-- ------------ Friday weathercard ---------- -->
+        <div class="weathercard">
+          <h2 id="Friday" class="weekday">Friday</h2>
+          <div class="weather-info">
+            <h3>16&deg;</h3>
+            <span id="cloudy"><i class="fas fa-cloud"></i>&nbsp;Cloudy</span>
+            <p class="weather-range">
+              <span id="highest_temp">H: 25</span
+              ><span id="lowest_temp">L: 12</span>
+            </p>
+          </div>
+        </div>
+
+        <!-- ------------ Saturday weathercard ---------- -->
+        <div class="weathercard">
+          <h2 id="Saturday" class="weekday">Saturday</h2>
+          <div class="weather-info">
+            <h3>16&deg;</h3>
+            <span id="cloudy"><i class="fas fa-cloud"></i>&nbsp;Cloudy</span>
+            <p class="weather-range">
+              <span id="highest_temp">H: 25</span
+              ><span id="lowest_temp">L: 12</span>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="/script.js"></script>
   </body>
